# fastapi_authen

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
app/: main.py
app/database/: __init__.py  database.py  domain.py  hash_pass.py  mail.py  mapping_strings.py  oauth.py  token.py
app/endpoints/: activate_user_endpoint.py  app.py  change_user_password_endpoint.py  create_company_endpoint.py  create_enrollment_endpoint.py  create_product_endpoint.py  create_sell_endpoint.py  create_user_endpoint.py  deactivate_user_endpoint.py  get_all_active_users_endpoint.py  get_all_products_endpoint.py  get_all_users_clean_endpoint.py  get_all_users_endpoint.py  get_company_name_endpoint.py  get_product_branch_endpoint.py  get_product_id_endpoint.py  get_product_name_endpoint.py  get_product_tag_endpoint.py  get_user_id_clean_endpoint.py  get_user_id_endpoint.py  login_user_endpoint.py  update_product_amount_endpoint.py  update_product_data_endpoint.py  update_user_data_endpoint.py  update_user_role_endpoint.py  update_user_status_endpoint.py
app/models/: __init__.py  product.py  sells.py  user.py
app/schemas/: __init__.py  company.py  enrollment.py  login.py  product.py  sells.py  token.py  user.py  vendor.py
app/services/: __init__.py  company_service.py  enrollment_service.py  product_service.py  sell_service.py  user_service.py
app/usercase/: __init__.py  activate_user_usercase.py  change_user_password_usercase.py  create_company_usercase.py  (+22 more)
page/: index.html  main-nav.html  products.html
test/: conftest.py
(+25 files in other folders)
